// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index > setVscodeSettingsJson case 0 1`] = `
{
  "css.validate": false,
  "less.validate": false,
  "scss.validate": false,
  "stylelint.validate": [
    "vue",
  ],
}
`;

exports[`index > setVscodeSettingsJson case 1 1`] = `
{
  "css.validate": false,
  "less.validate": false,
  "scss.validate": false,
  "stylelint.validate": [
    "vue",
    "scss",
    "css",
  ],
}
`;
